[package]
name = "router"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
dashmap = "6.2.1"
moka = { version = "0.12.15", features = ["future"] }
rand = "0.10.2"
redis = { version = "1.3.0", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["full"] }
